--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-TOKEN="ODkxNjI1MTM1MTcyMzU0MDQ4.GafxrX.T4q059AL_7RjYOaNzNOBTg7jInLialrg6C6UNw"
+TOKEN=""
 PREFIX='!'
-STATS="Zydoss"
-CHANS="RAIDED"
-DATA="@everyone @everyone @everyone @everyone @everyone @everyone @everyone @everyone @everyone @everyone @everyone  https://tenor.com/view/josh-hutcherson-josh-hutcherson-whistle-edit-whistle-2014-meme-gif-1242113167680346055"
-ROL="SLAVE"
-WEBHOOK="Zydoss"
+STATS=""
+CHANS=""
+DATA=""
+ROL=""
+WEBHOOK=""
